Completed UI Profile Page

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
